[tool.poetry]
name = "jsonschematools"
version = "0.1.0"
description = ""
authors = ["raufer <raufer92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
structlog = "^24.4.0"
dateparser = "^1.2.0"
dotmap = "^1.3.30"
orjson = "^3.10.11"
pyyaml = "^6.0.2"
jsonschema = "^4.23.0"
pydantic = "2.7.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
